Added major update to token functionality and other type optimization
